# tda_for_fairness

./: README.md  balance_job_errors  balance_job_output  firstmod_job_errors  if_job_output  pyproject.toml  random_job_output  requirements.txt  trak_job_errors  trak_job_output
analyses/toxigen_bert/factors_ekfac/: activation_covariance.safetensors  activation_eigenvalues.safetensors  activation_eigenvectors.safetensors  gradient_covariance.safetensors  gradient_eigenvalues.safetensors  gradient_eigenvectors.safetensors  lambda_matrix.safetensors  num_covariance_processed.safetensors  num_lambda_processed.safetensors
analyses/toxigen_bert/scores_ekfac/: query_dataset_metadata.json  (+1 more)
data_prep/: README.md  hatexplain_prep.py  toxigen_prep.py
exp/: .vis_k_removed.py.swp  TRAK_example.ipynb  config.py  datasets_prep.py  finetune.py  get_examples.py  main.py  test.ipynb  utils.py  vis.ipynb  vis_k_removed.py
exp_bert/: README.md  TRAK_job_errors  TRAK_job_output  __init.py__  compute_firstmod_scores.py  compute_firstmod_scores_trak.py  compute_scores.py  config.py  get_examples.py  if_job_output  main.py  random_job_output  run_baseline_balancing.py  run_counterfactual.py  train.py  trak_job_errors  trak_job_output  vis_counterfactual.py  vis_k_removed.py  vis_k_removed_json.py  vis_k_removed_loss.py  vis_scores.py  vis_scores_label.py  vis_scores_matrix.py
infembed_replication/: agnews_case_study.ipynb
res/hatexplain/: comparison_table.csv  examples.csv
res/toxigen/: comparison_table.csv  examples.csv
utils/: __init__.py  modules.py  utils.py
(+10 files in other folders)
